@@ -706,6 +706,10 @@ class CControllerPopupGeneric extends CController {
 					'preservekeys' => true
 				];
 
+				if (array_key_exists('real_hosts', $page_options)) {
+					$options['real_hosts'] = $page_options['real_hosts'];
+				}
+
 				if (array_key_exists('normal_only', $page_options)) {
 					$options['filter']['flags'] = ZBX_FLAG_DISCOVERY_NORMAL;
 				}
