@@ -56,6 +56,7 @@ class CControllerWidgetProblemHostsView extends CControllerWidget {
 				if ($filter_groupids === null) {
 					$filter_groupids = array_keys(API::HostGroup()->get([
 						'output' => [],
+						'real_hosts' => true,
 						'preservekeys' => true
 					]));
 				}
