@@ -54,6 +54,7 @@ function getSystemStatusData(array $filter) {
 			if ($filter_groupids === null) {
 				$filter_groupids = array_keys(API::HostGroup()->get([
 					'output' => [],
+					'real_hosts' => true,
 					'preservekeys' => true
 				]));
 			}
